fix: react babel warning

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
     "web-vitals": "^2.1.4",
     "node-sass": "^9.0.0"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
